--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,17 @@
-
+<<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Assigment Solution for Module 2</title>
+</head>
+<body>
+	<h1>Our Menu</h1>
+	<div class="row">
+		<div class="col-lg-3">
+			<h2>Chicken</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur suscipit scelerisque velit non porta. Morbi molestie elementum turpis eget pretium. Nulla pretium tellus ut pulvinar scelerisque. Donec vitae enim vitae sem vehicula hendrerit quis et urna. Sed nec ex vitae lectus rutrum ornare condimentum nec nibh. Duis sapien leo, finibus a rutrum ac, scelerisque ac neque. Proin ac elit nec nisi consequat condimentum vel sit amet ipsum.</p>
+		</div>
+	</div>
+</body>
+</html>
