--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Assigment Solution for Module 2</title>
   </head>
   <body>
     <h1>Our Menu</h1>
     <div class="row">
-      <div class="col-lg-3">
-        <h2>Chicken</h2>
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <h2 class="chicken">Chicken</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
           suscipit scelerisque velit non porta. Morbi molestie elementum turpis
@@ -21,7 +22,7 @@
         </p>
       </div>
       <div class="col-lg-3">
-        <h2>Beef</h2>
+        <h2 class="beef">Beef</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
           suscipit scelerisque velit non porta. Morbi molestie elementum turpis
@@ -33,7 +34,7 @@
         </p>
       </div>
       <div class="col-lg-3">
-        <h2>Sushi</h2>
+        <h2 class="sushi">Sushi</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
           suscipit scelerisque velit non porta. Morbi molestie elementum turpis
