--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,47 +3,59 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Assigment Solution for Module 2</title>
   </head>
   <body>
     <h1>Our Menu</h1>
     <div class="row">
-      <div class="col-lg-3 col-md-6 col-sm-12">
-        <h2 class="chicken">Chicken</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-          suscipit scelerisque velit non porta. Morbi molestie elementum turpis
-          eget pretium. Nulla pretium tellus ut pulvinar scelerisque. Donec
-          vitae enim vitae sem vehicula hendrerit quis et urna. Sed nec ex vitae
-          lectus rutrum ornare condimentum nec nibh. Duis sapien leo, finibus a
-          rutrum ac, scelerisque ac neque. Proin ac elit nec nisi consequat
-          condimentum vel sit amet ipsum.
-        </p>
+      <div class="item col-lg-4 col-md-6 col-sm-12">
+        <div class="section">
+          <h2 id="chicken">Chicken</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+            suscipit scelerisque velit non porta. Morbi molestie elementum
+            turpis eget pretium. Nulla pretium tellus ut pulvinar scelerisque.
+            Donec vitae enim vitae sem vehicula hendrerit quis et urna. Sed nec
+            ex vitae lectus rutrum ornare condimentum nec nibh. Duis sapien leo,
+            finibus a rutrum ac, scelerisque ac neque. Proin ac elit nec nisi
+            consequat condimentum vel sit amet ipsum.
+          </p>
+        </div>
       </div>
-      <div class="col-lg-3">
-        <h2 class="beef">Beef</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-          suscipit scelerisque velit non porta. Morbi molestie elementum turpis
-          eget pretium. Nulla pretium tellus ut pulvinar scelerisque. Donec
-          vitae enim vitae sem vehicula hendrerit quis et urna. Sed nec ex vitae
-          lectus rutrum ornare condimentum nec nibh. Duis sapien leo, finibus a
-          rutrum ac, scelerisque ac neque. Proin ac elit nec nisi consequat
-          condimentum vel sit amet ipsum.
-        </p>
+
+      <div class="item col-lg-4 col-md-6 col-sm-12">
+        <div class="section beef">
+          <h2 id="beef">Beef</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+            suscipit scelerisque velit non porta. Morbi molestie elementum
+            turpis eget pretium. Nulla pretium tellus ut pulvinar scelerisque.
+            Donec vitae enim vitae sem vehicula hendrerit quis et urna. Sed nec
+            ex vitae lectus rutrum ornare condimentum nec nibh. Duis sapien leo,
+            finibus a rutrum ac, scelerisque ac neque. Proin ac elit nec nisi
+            consequat condimentum vel sit amet ipsum.
+          </p>
+        </div>
       </div>
-      <div class="col-lg-3">
-        <h2 class="sushi">Sushi</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-          suscipit scelerisque velit non porta. Morbi molestie elementum turpis
-          eget pretium. Nulla pretium tellus ut pulvinar scelerisque. Donec
-          vitae enim vitae sem vehicula hendrerit quis et urna. Sed nec ex vitae
-          lectus rutrum ornare condimentum nec nibh. Duis sapien leo, finibus a
-          rutrum ac, scelerisque ac neque. Proin ac elit nec nisi consequat
-          condimentum vel sit amet ipsum.
-        </p>
+
+      <div class="item col-lg-4 col-md-6 col-sm-12">
+        <div class="section">
+          <h2 id="sushi">Sushi</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+            suscipit scelerisque velit non porta. Morbi molestie elementum
+            turpis eget pretium. Nulla pretium tellus ut pulvinar scelerisque.
+            Donec vitae enim vitae sem vehicula hendrerit quis et urna. Sed nec
+            ex vitae lectus rutrum ornare condimentum nec nibh. Duis sapien leo,
+            finibus a rutrum ac, scelerisque ac neque. Proin ac elit nec nisi
+            consequat condimentum vel sit amet ipsum.
+          </p>
+        </div>
       </div>
     </div>
   </body>
